# PHYSIM_6DPose

./: README.md  runMaster.sh  staticTrans.txt
rgbd-utils/matlab/: getScenePointCloud.m
ros-packages/devel/: .catkin  .rosinstall  setup.sh
ros-packages/src/FastGlobalRegistration/ExtractFPFHFeatures/: CMakeLists.txt
ros-packages/src/FastGlobalRegistration/ExtractFPFHFeatures/src/: ExtractFPFH.cpp
ros-packages/src/marvin_convnet/: CMakeLists.txt  package.xml
ros-packages/src/marvin_convnet/src/: detect.cu  marvin.hpp  save_images.cpp
ros-packages/src/pose_estimation/: CMakeLists.txt
ros-packages/src/pose_estimation/src/: denoisePointCloud.m  poseService.m  poseServiceIterative.m  poseServiceSelfLearn.m  poseServiceStart.m  poseTesting.m
ros-packages/src/pose_estimation/src/Extras/: computegradient.m  poseGenSelfLearn.m  poseServiceGradient.m  poseServiceSegm.m
ros-packages/src/pose_estimation/src/Utilities/: KNNSearch.ptx
ros-packages/src/pose_estimation/src/initializePose/: getBestInitPosePCA.m  getInitPoseFGR.m  getInitPosePCA.m  getInitPoseSuper4PCS.m
ros-packages/src/pose_estimation/src/matlab_gen/jar/: detection_package-0.0.0.md5  librealsense-1.11.0.md5  marvin_convnet-1.0.0.md5  pose_estimation-1.0.0.md5  realsense_camera-1.0.0.md5
ros-packages/src/pose_estimation/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
ros-packages/src/pose_estimation/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+detection_package/: UpdateActiveListFrameRequest.m  UpdateActiveListFrameResponse.m  UpdateBboxRequest.m  UpdateBboxResponse.m
ros-packages/src/pose_estimation/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+marvin_convnet/: DetectObjectsRequest.m  DetectObjectsResponse.m
ros-packages/src/pose_estimation/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+pose_estimation/: EstimateObjectPoseRequest.m  EstimateObjectPoseResponse.m  ObjectPose.m
ros-packages/src/pose_estimation/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+realsense_camera/: StreamSensorRequest.m  StreamSensorResponse.m
ros-packages/src/pose_estimation/src/models/objects_pracsys/: crayola_24_ct.ply  dove_beauty_bar.ply  elmers_washable_no_run_school_glue.ply  expo_dry_erase_board_eraser.ply  rawlings_baseball.ply  scotch_duct_tape.ply  soft_white_lightbulb.ply  up_glucose_bottle.ply
ros-packages/src/pose_estimation/src/optimizePhysics/: runPhyTrimICP.m  runSceneOptimizer.m  runSceneOptimizer_1.m  runSceneOptimizer_2.m
ros-packages/src/pose_estimation/src/removebackground/: getExactEnvCalib.m  removeEnvPoints.m
ros-packages/src/pose_estimation/src/segmentation/: getGTBBoxSegmentation.m  getModelPoints.m  getRCNNSegmentation.m  getSegfromMask.m
ros-packages/src/pose_estimation/src/segmentation/getFCNSegmentation/: getFCNSegmentation.m  getSegmentedPointCloud.m
ros-packages/src/pose_estimation/srv/: EstimateObjectPose.srv
ros-packages/src/super4pcs/super4pcs/io/: CMakeLists.txt  io.cc  io.h  io_ply.h
tmp/: allInitPose.txt  cam.info.txt  cam.info.txt~  final_pose.txt  init_pose.txt  rcnn-clean-1.ply  rcnn-clean-2.ply  rcnn-clean-expo_dry_erase_board_eraser.ply  rcnn-match-expo_dry_erase_board_eraser.ply  rcnn-raw-1.ply  rcnn-raw-2.ply  rcnn-result-1.ply  rcnn-result-2.ply  result-1.ply  seg-clean-1.ply  seg-clean-2.ply  seg-raw-1.ply  seg-raw-2.ply  seg-result-1.ply  seg-result-2.ply
tmp/bbox_detections/: frame-000000.expo_dry_erase_board_eraser.score.txt  frame-000000.laugh_out_loud_joke_book.score.txt  frame-000000.scotch_duct_tape.score.txt  frame-000001.laugh_out_loud_joke_book.score.txt  frame-000001.scotch_duct_tape.score.txt  frame-000002.laugh_out_loud_joke_book.score.txt  frame-000002.scotch_duct_tape.score.txt  frame-000003.laugh_out_loud_joke_book.score.txt  frame-000003.scotch_duct_tape.score.txt  frame-000004.laugh_out_loud_joke_book.score.txt  frame-000004.scotch_duct_tape.score.txt  frame-000005.laugh_out_loud_joke_book.score.txt  frame-000005.scotch_duct_tape.score.txt  frame-000006.laugh_out_loud_joke_book.score.txt  frame-000006.scotch_duct_tape.score.txt  frame-000007.laugh_out_loud_joke_book.score.txt  frame-000007.scotch_duct_tape.score.txt  frame-000008.laugh_out_loud_joke_book.score.txt  frame-000008.scotch_duct_tape.score.txt  frame-000009.laugh_out_loud_joke_book.score.txt  frame-000009.scotch_duct_tape.score.txt  (+10 more)
(+154 files in other folders)
